# Utils

./: .dockerignore  .gitignore  Dockerfile  GPU_control.py  ai.py  config.py  crud.py  database.py  dependencies.py  docker-compose.yaml  funcs.py  lifespan.py  main.py  milvus_schemas.py  mistral.py  pyproject.toml  pyschemas.py  requirements.txt  update_db.py
routes/: addresses_routes.py  promts_routes.py  redis_routes.py
routes/Frida_routes/: ai_router.py  auth_router.py  logger_router.py  milvus_router.py  mistral_router.py
