[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.8",
    "mistralai>=1.8.1",
    "mysql-connector-python>=9.3.0",
    "psycopg2-binary>=2.9.10",
    "pymilvus>=2.5.4",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "unidecode>=1.3.8",
    "uvicorn>=0.34.0",
]
